--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
-#main {
-	width:'1000px';
-	height:'600px';
+
+/* Main Canvas */
+#main{
+	width:500px;
+	height:500px;
+	margin:auto;
+	border-style:solid;
 }
+
